# chessEngine

./: .gitignore  CMakeLists.txt  board.cpp  board.h  constants.h  fen.h  helperFunctions.cpp  helperFunctions.h  main.cpp  piece.cpp  piece.h
